[package]
name = "rsiotmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = "^0.4.23"

env_logger = "0.10.0"
log = "0.4.8"

# bytes = "0.4.0"
futures-core = "0.3.1"
futures-util = "0.3.1"

nix = { version= "0.27.1", features=["signal"]}

maplit = "1.0.2"
mqtt-async-client = { path = "deps/mqtt-async-client-rs" }

rustls = { version = "0.21.7", optional = true }
rustls-pemfile = { version = "1.0.3", optional = true }
webpki-roots = "0.25.2"

structopt = "0.3.5"

tokio = { version = "1.24.2", features = ["io-util", "macros", "net", "rt", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.24.0", optional = true }

toml-parse = { path="deps/toml-parse" }

sqlite="0.31.1"

derivative = "2.2.0"
mqtt-v5-broker = { path = "deps/mqtt-broker/mqtt-v5-broker" }

hyper={ version = "0.14.23", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http =  { version="0.4.4", features = ["full"] }
http = "0.2.8"
http-body = "0.4.5"

rs-leveldb = { path = "deps/leveldb" }
db-key = "0.0.5"

mlua = { version = "0.9.1", features = ["lua54", "vendored"] }

parquet="47.0.0"

tokio-cron-scheduler = "0.9.4"

# arrow-flight = "51.0.0"
# futures = { version = "0.3", default-features = false, features = ["alloc"] }
# tonic = { version = "0.11.0", default-features = false, features = ["transport", "codegen", "prost"] }

datafusion = "37.0.0"
datafusion-physical-expr = "37.0.0"
datafusion-expr = "37.0.0"

async-trait = "0.1.73"

[features]
default = ["tls"]
tls = ["rustls", "tokio-rustls", "rustls-pemfile"]

[profile.release]
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
lto = true

[dependencies.sqlite3-src]
version="0.5.1"
features=["bundled"]

